--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,67 +5,38 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
     tools:context="takeanap.layout.com.takeanap.MainActivity"
     android:background="@drawable/bg"
     tools:ignore="ContentDescription"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:orientation="vertical">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar">
+    </include>
+
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:weightSum="1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:orientation="vertical">
 
         <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:id="@+id/top"
-            android:layout_marginBottom="10dp">
-
-            <ImageView
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                app:srcCompat="@drawable/ic_arrow_back_white_24dp"
-                android:id="@+id/imageView"
-                android:layout_weight="1" />
-
-            <TextView
-                android:text="@string/playlist"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/playlist"
-                android:layout_weight=".1"
-                android:textSize="18sp"
-                android:textColor="@color/common_google_signin_btn_text_dark_default" />
-
-        </LinearLayout>
-
-        <Button
-            android:text="Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/button2" />
-
-        <LinearLayout
             android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:id="@+id/nomes"
             android:layout_weight="1"
             android:gravity="center">
 
             <TextView
                 android:text="@string/ocean"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:id="@+id/musicNome"
-                android:layout_weight="3"
+                android:layout_weight="1"
                 android:textSize="30sp"
                 android:textColor="#FFFFFF"
                 android:textAlignment="center"
@@ -73,52 +44,58 @@
 
             <TextView
                 android:text="@string/natureza"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:id="@+id/categoriaNome"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp"
                 android:textAlignment="center"
-                android:gravity="top" />
+                android:gravity="top"
+                android:layout_weight="1" />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="1"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
             android:id="@+id/middle"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight=".4">
 
             <ImageView
-                android:layout_height="378dp"
+                android:layout_height="match_parent"
                 app:srcCompat="@drawable/foto"
                 android:id="@+id/fotoId"
-                android:layout_width="350dp" />
+                android:layout_gravity="center"
+                android:layout_width="fill_parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp" />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
             android:id="@+id/bottom"
             android:paddingRight="20dp"
             android:paddingLeft="20dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:padding="15dp"
+            android:layout_gravity="center">
 
             <ImageView
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 app:srcCompat="@drawable/ic_favorite_white_24dp"
                 android:id="@+id/favorite"
                 android:layout_width="wrap_content"
 
                 android:layout_weight="1"
-                android:padding="0dp" />
+                android:padding="0dp"
+                android:layout_marginRight="30dp" />
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 app:srcCompat="@drawable/ic_skip_previous_white_24dp"
                 android:id="@+id/previous"
                 android:layout_weight="1" />
@@ -126,24 +103,31 @@
             <ImageView
                 app:srcCompat="@drawable/ic_play_circle_filled_white_24dp"
                 android:id="@+id/playButton"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_width="wrap_content"
-                android:layout_weight="2"
-                android:adjustViewBounds="false" />
+                android:layout_weight="1"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:adjustViewBounds="false"
+                android:paddingLeft="0dp"
+                android:paddingRight="0dp"
+                android:paddingTop="0dp"
+                android:paddingBottom="0dp" />
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 app:srcCompat="@drawable/ic_skip_next_white_24dp"
                 android:id="@+id/next"
                 android:layout_weight="1" />
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 app:srcCompat="@drawable/ic_access_time_white_24dp"
                 android:id="@+id/timer"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:layout_marginLeft="30dp" />
 
         </LinearLayout>
     </LinearLayout>
