--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-android"
-    android:id="@+id/toolbar"
+    android:id="@+id/toolbarId"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
