--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-android"
+
     android:id="@+id/toolbarId"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
 
-    android:background="@android:color/transparent"></android.support.v7.widget.Toolbar>
+    android:background="@android:color/transparent">
+
+    <android.support.v7.widget.ActionMenuView
+        android:id="@+id/amvMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="?attr/actionBarSize"
+        android:icon="@drawable/ic_action_home"/>
+
+
+
+
+</android.support.v7.widget.Toolbar>
