--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -7,128 +7,140 @@
     android:layout_height="match_parent"
 
     tools:context="takeanap.layout.com.takeanap.PlayerActivity"
-    android:background="@drawable/bg"
+    android:background="@color/colorPrimary"
     tools:ignore="ContentDescription"
     android:weightSum="1"
     android:orientation="vertical">
 
-    <include
-        android:id="@+id/toolbarId"
-        layout="@layout/toolbar">
-    </include>
-
-
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/linerId">
+
+        <include
+            android:id="@+id/toolbarId"
+            layout="@layout/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </include>
 
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/top"
-            android:layout_weight="1"
-            android:gravity="center">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <TextView
-                android:text="@string/ocean"
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/titleId"
+                android:id="@+id/top"
                 android:layout_weight="1"
-                android:textSize="30sp"
-                android:textColor="#FFFFFF"
-                android:textAlignment="center"
-                android:gravity="bottom" />
+                android:gravity="center">
 
-            <TextView
-                android:text="@string/natureza"
-                android:layout_width="fill_parent"
+                <TextView
+                    android:text="@string/ocean"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:id="@+id/titleId"
+                    android:layout_weight="1"
+                    android:textSize="30sp"
+                    android:textColor="#FFFFFF"
+                    android:textAlignment="center"
+                    android:gravity="bottom" />
+
+                <TextView
+                    android:text="@string/natureza"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:id="@+id/categoryId"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18sp"
+                    android:textAlignment="center"
+                    android:gravity="top"
+                    android:layout_weight="1" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/categoryId"
-                android:textColor="#FFFFFF"
-                android:textSize="18sp"
-                android:textAlignment="center"
-                android:gravity="top"
-                android:layout_weight="1" />
-        </LinearLayout>
+                android:id="@+id/middle"
+                android:layout_weight=".4"
+                android:gravity="center">
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:id="@+id/middle"
-            android:gravity="center"
-            android:layout_weight=".4">
+                <ImageView
+                    android:layout_height="match_parent"
+                    android:id="@+id/photoId"
+                    android:layout_width="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter"
+                    android:layout_gravity="center"
+                    android:padding="5dp" />
+            </LinearLayout>
 
-            <ImageView
-                android:layout_height="match_parent"
-                android:id="@+id/photoId"
-                android:layout_gravity="center"
-                android:layout_width="fill_parent"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:id="@+id/bottom"
-            android:paddingRight="20dp"
-            android:paddingLeft="20dp"
-            android:layout_weight="1"
-            android:padding="15dp"
-            android:layout_gravity="center">
-
-            <ImageView
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_tab_favourite"
-                android:id="@+id/favoriteId"
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="wrap_content"
-
+                android:layout_height="fill_parent"
+                android:id="@+id/bottom"
+                android:paddingRight="20dp"
+                android:paddingLeft="20dp"
                 android:layout_weight="1"
-                android:padding="0dp"
-                android:layout_marginRight="30dp" />
+                android:padding="15dp"
+                android:layout_gravity="center">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_action_previous"
-                android:id="@+id/previousId"
-                android:layout_weight="1" />
+                <ImageView
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_tab_favourite"
+                    android:id="@+id/favoriteId"
+                    android:layout_width="wrap_content"
 
-            <ImageView
-                app:srcCompat="@drawable/ic_action_play"
-                android:id="@+id/startId"
-                android:layout_height="match_parent"
-                android:layout_width="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:adjustViewBounds="false"
-                android:paddingLeft="0dp"
-                android:paddingRight="0dp"
-                android:paddingTop="0dp"
-                android:paddingBottom="0dp" />
+                    android:layout_weight="1"
+                    android:padding="0dp"
+                    android:layout_marginRight="30dp" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_action_next"
-                android:id="@+id/nextId"
-                android:layout_weight="1" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_action_previous"
+                    android:id="@+id/previousId"
+                    android:layout_weight="1" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_action_timer"
-                android:id="@+id/timerId"
-                android:layout_weight="1"
-                android:layout_marginLeft="30dp" />
+                <ImageView
+                    app:srcCompat="@drawable/ic_action_play"
+                    android:id="@+id/startId"
+                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:adjustViewBounds="false"
+                    android:paddingLeft="0dp"
+                    android:paddingRight="0dp"
+                    android:paddingTop="0dp"
+                    android:paddingBottom="0dp" />
 
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_action_next"
+                    android:id="@+id/nextId"
+                    android:layout_weight="1" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_action_timer"
+                    android:id="@+id/timerId"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="30dp" />
+
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+
+</RelativeLayout>
