Bug Next/Previous Fixed + Layout Timer

--- a/app/src/main/res/layout/time_picker.xml
+++ b/app/src/main/res/layout/time_picker.xml
@@ -11,5 +11,6 @@
         android:layout_weight="1"
         android:amPmTextColor="@android:color/black"
         android:numbersBackgroundColor="@android:color/black"
-        android:headerBackground="@color/colorPrimaryDark" />
+        android:headerBackground="@color/colorPrimaryDark"
+        android:background="@color/colorPrimary" />
 </LinearLayout>
